--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
         </div>
 
         <div class="content">
-            <h3>Technology</h3>
+            <h3>2° ano B</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                 Voluptatem laborum odit repellendus nihil est sapiente inventore reprehenderit iure tempora voluptatibus saepe vel officiis esse nobis blanditiis porro ea sunt, dolorum quam expedita quasi eius accusamus assumenda atque.
