--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     
+    <!-- CARD ROXO -->
     <div class="card">
         <h1>2°B</h1>
         <h1>Colégio Cerávolo</h1>
         <h1>2023</h1>
     </div>
 
+    <!-- SEÇÃO DE ALUNOS -->
     <div class="alunos">
         <a href="#" class="aluno">
             <img src="img/gru.jpg" alt="avatar">
@@ -212,6 +214,7 @@
         </a>
     </div>
 
+    <!-- CARDS DE ESPECIFICAÇÃO -->
    <div class="cards-e">
     <div class="card-e">
         <!-- ICON -->
