--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- SEÇÃO DE ALUNOS -->
     <div class="alunos">
-        <a href="#" class="aluno">
+        <a href="aluno.html" class="aluno">
             <img src="img/gru.jpg" alt="avatar">
             <p>Aluno</p>
         </a>
