--- a/aluno.html
+++ b/aluno.html
@@ -12,11 +12,13 @@
 
     <div class="fundo"></div>
     <div class="avatar">
+        <!-- Coloque um avatar de sua preferência na pasta IMG, e altere na linha abaixo -->
         <img src="img/gru.jpg" alt="">
     </div>
 
     <div class="info">
-        <h1>Nome: XXX</h1>
+        <!-- MUDAR SOMENTE OS "XXX" -->
+        <h1>Nome: XXX</h1> 
         <h1>Data de Nascimento: XXX</h1>
         <h1><a href="https://instagram.com/XXX">Instagram: XXX</a></h1>
         <h1>Trabalha: XXX (com o que)</h1>
