aplicando tema dark

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 
 
     
-
+    <div class="toggle">
+        <input id="switch" type="checkbox" name="theme">
+        <label for="switch">Light/Dark</label>
+    </div>
 
 
 
