--- a/aluno.html
+++ b/aluno.html
@@ -14,6 +14,10 @@
     <div class="avatar">
         <!-- Coloque um avatar de sua preferência na pasta IMG, e altere na linha abaixo -->
         <img src="img/gru.jpg" alt="">
+        <div class="toggle">
+            <input id="switch" type="checkbox" name="theme">
+            <label for="switch">Light/Dark</label>
+        </div>
     </div>
 
     <div class="info">
@@ -25,5 +29,7 @@
         <h1>Um pouco sobre mim: XXX</h1>
     </div>
 
+
+    <script src="script.js"></script>
 </body>
 </html>
