alterações de design

--- a/aluno.html
+++ b/aluno.html
@@ -22,11 +22,11 @@
 
     <div class="info">
         <!-- MUDAR SOMENTE OS "XXX" -->
-        <h1>Nome: XXX</h1> 
-        <h1>Data de Nascimento: XXX</h1>
-        <h1><a href="https://instagram.com/XXX">Instagram: XXX</a></h1>
-        <h1>Trabalha: XXX (com o que)</h1>
-        <h1>Um pouco sobre mim: XXX</h1>
+        <h1><span>Nome:</span> XXX</h1> 
+        <h1><span>Data de Nascimento:</span> dd/mm/aaaa (idade)</h1>
+        <h1><a href="https://instagram.com/XXX"><span>Instagram:</span> @instagram</a></h1>
+        <h1><span>Trabalha:</span> S/N (com o que)</h1>
+        <h1><span>Um pouco sobre mim:</span> XXX</h1>
     </div>
 
 
