--- a/index.html
+++ b/index.html
@@ -12,10 +12,7 @@
 
 
     
-    <div class="toggle">
-        <input id="switch" type="checkbox" name="theme">
-        <label for="switch">Light/Dark</label>
-    </div>
+    
 
 
 
@@ -24,6 +21,12 @@
         <h1>2°B</h1>
         <h1>Colégio Cerávolo</h1>
         <h1>2023</h1>
+    </div>
+
+
+    <div class="toggle" style="margin-bottom: 2vh;">
+        <input id="switch" type="checkbox" name="theme">
+        <label for="switch">Light/Dark</label>
     </div>
 
     <!-- SEÇÃO DE ALUNOS -->
@@ -233,7 +236,7 @@
         </div>
 
         <div class="content">
-            <h3>Colégio Cerávolo</h3>
+            <h3>2° ano B</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                 Voluptatem laborum odit repellendus nihil est sapiente inventore reprehenderit iure tempora voluptatibus saepe vel officiis esse nobis blanditiis porro ea sunt, dolorum quam expedita quasi eius accusamus assumenda atque.
@@ -252,7 +255,7 @@
         </div>
 
         <div class="contente">
-            <h3>2° ano B</h3>
+            <h3>Colégio Cerávolo</h3>
             <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
                 Voluptatem laborum odit repellendus nihil est sapiente inventore reprehenderit iure tempora voluptatibus saepe vel officiis esse nobis blanditiis porro ea sunt, dolorum quam expedita quasi eius accusamus assumenda atque.
